fix rows wrapping

--- a/src/components/seatChart/SeatChart.scss
+++ b/src/components/seatChart/SeatChart.scss
@@ -5,17 +5,19 @@
 .seat-chart {
   margin-top: 20px;
   overflow: scroll;
+  display: grid;
+  justify-items: center;
   border-bottom: 1px solid rgb(185, 183, 183);
 }
 
 .seat-chart-row {
   flex-wrap: nowrap;
-  margin: 5px 0px;
-  display: inline-flex;
+  margin: 10px 0px;
 }
 
 .seat-chart-row-container {
   text-align: center;
+  width: min-content;
 }
 
 .right-of-middle-rows {
